# skald

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  models.json  release-plz.toml
.claude/skills/config-and-aliases/: SKILL.md
.claude/skills/dependencies/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/ui-and-output/: SKILL.md
.github/workflows/: ci.yml  release-plz-release.yml  release-plz.yml  release.yml  update-models.yml
crates/skald/: CHANGELOG.md  Cargo.toml  README.md
crates/skald-core/: Cargo.toml  README.md
crates/skald-core/src/: lib.rs
crates/skald-core/src/config/: aliases.rs  expand.rs  loader.rs  mod.rs  paths.rs  schema.rs  writer.rs
crates/skald-core/src/doctor/: checks.rs  mod.rs
crates/skald-core/src/error/: mod.rs
crates/skald-core/src/logging/: mod.rs  rotate.rs
crates/skald-core/src/output/: format.rs
crates/skald-core/src/prompts/: builtin.rs  eject.rs  mod.rs  render.rs  resolve.rs
crates/skald-platform/: Cargo.toml  README.md
crates/skald-platform/src/: github.rs  gitlab.rs  lib.rs
crates/skald-providers/: Cargo.toml  README.md  models.json
crates/skald-providers/src/: claude_cli.rs  cli_provider.rs  config.rs  lib.rs  models.rs
crates/skald-vcs/: Cargo.toml  README.md
crates/skald-vcs/src/: git.rs  lib.rs
crates/skald/src/: main.rs
crates/skald/src/cli/: aliases.rs  commit.rs  completions.rs  config.rs  doctor.rs  integrations.rs  mod.rs  pr.rs  root.rs  upgrade.rs
crates/skald/src/ui/: carousel.rs  editor.rs  mod.rs
crates/skald/tests/: smoke.rs
docs/: README.md  aliases.md  cli-reference.md  commit.md  configuration.md  doctor.md  getting-started.md  integrations.md  platforms.md  pr.md  prompts.md  providers.md
docs/superpowers/plans/: 2026-03-30-alias-add-remove.md
docs/superpowers/specs/: 2026-03-30-alias-add-remove-design.md
scripts/: install.sh  update-models.sh
src/: main.rs
src/cli/: aliases.rs  commit.rs  config.rs  doctor.rs  integrations.rs  mod.rs  pr.rs  root.rs  upgrade.rs
src/core/config/: aliases.rs  expand.rs  loader.rs  mod.rs  writer.rs
src/core/doctor/: checks.rs  mod.rs
src/core/logging/: mod.rs  rotate.rs
src/core/prompts/: eject.rs  render.rs  resolve.rs
src/engine/: compaction.rs  mod.rs
src/engine/config/: aliases.rs  expand.rs  loader.rs  mod.rs  writer.rs
src/engine/doctor/: checks.rs  mod.rs
src/engine/logging/: mod.rs  rotate.rs
src/engine/output/: format.rs
src/engine/prompts/: builtin.rs  eject.rs  mod.rs  render.rs  resolve.rs
src/engine/upgrade/: mod.rs
src/platform/: github.rs  gitlab.rs
src/providers/: anthropic.rs  cli_provider.rs  config.rs  mod.rs  models.rs  resolve.rs
src/ui/: carousel.rs  color.rs  mod.rs  theme.rs
src/vcs/: diff_filter.rs  git.rs  mod.rs
tests/: smoke.rs
