[package]
name = "skald-cli"
version = "0.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/dbtlr/skald"
description = "AI-powered git workflow CLI"
readme = "README.md"
default-run = "sk"

[[bin]]
name = "sk"
path = "src/main.rs"

[features]
default = []
integrations = []

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cliclack = "0.3"
console = "0.15"
crossterm = "0.29"
dirs = "5"
flate2 = "1"
xz2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tar = "0.4"
tempfile = "3"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "process"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
serial_test = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
