[package]
name = "skald-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for skald — config, logging, output, error types"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tera = "1"
ureq = { version = "2", features = ["json"] }
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
cli = ["clap"]
