[package]
name = "skald-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform adapter trait and implementations for skald"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
