[package]
name = "skald-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI provider trait and implementations for skald"

[dependencies]
async-trait = "0.1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
ureq = "2"
