[package]
name = "skald"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered git workflow CLI"
default-run = "sk"

[[bin]]
name = "sk"
path = "src/main.rs"

[dependencies]
skald-core = { path = "../skald-core", features = ["cli"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cliclack = "0.3"
console = "0.15"
serde_json = "1"
atty = "0.2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
