[package]
name = "skald"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered git workflow CLI"
default-run = "sk"

[[bin]]
name = "sk"
path = "src/main.rs"

[dependencies]
skald-core = { path = "../skald-core", features = ["cli"] }
skald-vcs = { path = "../skald-vcs" }
skald-providers = { path = "../skald-providers" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cliclack = "0.3"
console = "0.15"
crossterm = "0.29"
flate2 = "1"
serde_json = "1"
tar = "0.4"
tempfile = "3"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
ureq = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
