[package]
name = "skald"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "AI-powered git workflow CLI"
default-run = "sk"

[[bin]]
name = "sk"
path = "src/main.rs"

[dependencies]
skald-core = { path = "../skald-core", version = "0.3.0", features = ["cli"] }
skald-vcs = { path = "../skald-vcs", version = "0.3.0" }
skald-providers = { path = "../skald-providers", version = "0.3.0" }
skald-platform = { path = "../skald-platform", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cliclack = "0.3"
console = "0.15"
crossterm = "0.29"
flate2 = "1"
serde_json = "1"
tar = "0.4"
tempfile = "3"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
ureq = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
serial_test = "3"
tempfile = "3"
